--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/api/index.js",
+    "dev": "NODE_ENV=production tsx server/index.ts",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --external:vite --bundle --format=esm --outfile=dist/api/index.js",
     "start": "NODE_ENV=production node dist/api/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
