--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=production tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --external:vite --bundle --format=esm --outfile=dist/api/index.js",
+    "build": "./node_modules/.bin/vite build && ./node_modules/.bin/esbuild server/index.ts --platform=node --packages=external --external:vite --bundle --format=esm --outfile=dist/api/index.js",
     "start": "NODE_ENV=production node dist/api/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
